primary/secondary source of data added

--- a/proposal.tex
+++ b/proposal.tex
@@ -96,18 +96,36 @@
 \cleardoublepage
 
 \subsection{Primary/Secondary Source of Data Collection}
+The data set used in our system are:
+\begin{enumerate}
+\item User's profile\\
+  It will be extracted from facebook API
+\item Music data set\\
+  It will be extracted from Million Song Dataset from kaggle. \\
+  Available Features of Music data set are :
+  \begin{enumerate}
+  \item List of Artist and Titles
+  \item Track-level tags and similar tracks
+  \item Music Lyrics
+  \end{enumerate}
+\end{enumerate}
 \cleardoublepage
 
 \subsection{System Block Diagram}
 \cleardoublepage
 
 \subsection{Algorithm to be used}
+
 \cleardoublepage
 
-\subsection{Algorithm Flow Diageam}
+\subsection{Algorithm Flow Diagram}
 \cleardoublepage
 
 \subsection{Description of each block/module}
+
+\begin{enumerate}
+\item User Model\\
+  The User's information will be extracted from facebook profile, which will be used to create a user's model.
 \cleardoublepage
 
 \subsection{Requirement List (Hardware/Software Tools)}
