Added acknowledgement and abstract

--- a/proposal.tex
+++ b/proposal.tex
@@ -60,7 +60,8 @@
 
 \section*{Acknowledgement}
 \addcontentsline{toc}{section}{Acknowledgement}
-
+	We would like to express our sincere gratitude to the \textbf{Department of Electronics and Computer Engineering} for providing us opportunity to implement the knowledge gained over these years as the Major Project for fourth year. We would also like to acknowledge with much appreciation the crucial role of \textbf{Dr. Aman Shakya} for providing valuable suggestion and guidance.\\
+We would also like to thank all of our friends who have directly and indireclty assisted us for selecting this project.
 \cleardoublepage
 
 \tableofcontents
@@ -79,8 +80,14 @@
 \thispagestyle{empty}
 \cleardoublepage
 
+\section*{Abstract}
+With the evolution of internet and popularity of social media, it has become the most prominent and dominent source of information sharing and communication. A person's perference can be determined using his/her social media. Hence based on this information about his/her profile related content can be delievered to the user.\\
+Therefore we have come with ``\textbf{Social Media Profile Based Music Recommendation System}''. This project mainly concentrates on the recommendation of the music based on the preference of the user which basically consists ofthe three parts as input,process and output. In input part, the system takesuser data fetched from the social media and information about the music. In the processing media, the userdata and music data are analyzed for the recommender system(content based and collaborative filtering). Similarly, in the output part, it recommends the music to the user.
+\thispagestyle{empty}
+\cleardoublepage
 \pagenumbering{arabic}
 \section{Introduction}
+	
 \cleardoublepage
 
 \section{Feasibility Study Report}
