Added feasibility report

--- a/proposal.tex
+++ b/proposal.tex
@@ -60,7 +60,8 @@
 
 \section*{Acknowledgement}
 \addcontentsline{toc}{section}{Acknowledgement}
-	We would like to express our sincere gratitude to the \textbf{Department of Electronics and Computer Engineering} for providing us opportunity to implement the knowledge gained over these years as the Major Project for fourth year. We would also like to acknowledge with much appreciation the crucial role of \textbf{Dr. Aman Shakya} for providing valuable suggestion and guidance.\\
+	We would like to express our sincere gratitude to the \textbf{Department of Electronics and Computer Engineering }of IOE, Pulchowk Campus for providing us opportunity to implement the knowledge gained over these years as the Major Project for fourth year.\\ 
+	Besides we are highly indebeted to our teacher \textbf{Dr. Aman Shakya} for providing valuable suggestion, guidance and motivation for this project.\\
 We would also like to thank all of our friends who have directly and indireclty assisted us for selecting this project.
 \cleardoublepage
 
@@ -87,10 +88,18 @@ Therefore we have come with ``\textbf{Social Media Profile Based Music Recommend
 \cleardoublepage
 \pagenumbering{arabic}
 \section{Introduction}
-	
+	``\textbf{Social Media Profile Based Music Recommendation}'' is the system to recommend the music to the users based his/her preference which is obtained from the social media. In this contemporary era of digital technologies, social media has become one of the prominent means for information sharing and communication. Likewise music has been one of the prominent market of entertainment. People listen to music everyday. The fact that music can blend with any emotion has made it's way to different sorts of people with different sorts of personality.\\
+	Hence we have come up with the system to recommend the music to a different people based on their social media profiles.
 \cleardoublepage
 
 \section{Feasibility Study Report}
+	Feasibility of the project has been sub-divided into the further three components and are presented as:\\
+	\subsection{Operational Feasibility}
+	Since people use their social media and listen to the music on the regular basis, the proposed is operationally feasible.
+	\subsection{Technical Feasibility}
+	As the technical specification of the software is a computer and internet which are readily available along with the data(music and social media profiles), our system is technically feasible.
+	\subsection{Economic Feasibility}
+	After the cost analysis of the system regarding the implementation cost, technical cost we can conclude the system is economically feasible as well.
 \cleardoublepage
 
 \section{Objective of the Project}
