--- a/proposal.tex
+++ b/proposal.tex
@@ -62,7 +62,7 @@
 \addcontentsline{toc}{section}{Acknowledgement}
 	We would like to express our sincere gratitude to the \textbf{Department of Electronics and Computer Engineering }of IOE, Pulchowk Campus for providing us opportunity to implement the knowledge gained over these years as the Major Project for fourth year.\\ 
 	Besides we are highly indebeted to our teacher \textbf{Dr. Aman Shakya} for providing valuable suggestion, guidance and motivation for this project.\\
-We would also like to thank all of our friends who have directly and indireclty assisted us for selecting this project.
+Finally we would also like to thank all of our friends who have directly and indireclty assisted us for selecting this project.
 \cleardoublepage
 
 \tableofcontents
@@ -95,7 +95,7 @@ Therefore we have come with ``\textbf{Social Media Profile Based Music Recommend
 \section{Feasibility Study Report}
 	Feasibility of the project has been sub-divided into the further three components and are presented as:\\
 	\subsection{Operational Feasibility}
-	Since people use their social media and listen to the music on the regular basis, the proposed is operationally feasible.
+	Since the end product is a website to recommend music to the user based on their social profiles, the proposed system requires the use of internet which are readily available across many countries. Hence the proposed system is operationally feasible.
 	\subsection{Technical Feasibility}
 	As the technical specification of the software is a computer and internet which are readily available along with the data(music and social media profiles), our system is technically feasible.
 	\subsection{Economic Feasibility}
@@ -103,6 +103,21 @@ Therefore we have come with ``\textbf{Social Media Profile Based Music Recommend
 \cleardoublepage
 
 \section{Objective of the Project}
+The primary objective of the project is to design, develop and implement a fully functional system to recommend user the music based on his/her social media profile. The whole process of creating system is intended to be achieved through a series of minor procedures, which can be further subdivided into two major stages.\\
+The first involved the problem study, solution proposition, designing, developement and system installation. The second phase include the acutal operation, solution of obsolescence problems and progress toward the new standards.\subsection{Stage 1}
+\begin{itemize}
+	\item To make it easier for social media user to get information about musci based on their personal preference.
+	\item To design and implement simple, informative and easy to use user interface.
+	\item To design and develope the system according to the people's need using the latest available technology.
+\end{itemize}
+\subsection{Stage 2}
+\begin{itemize}
+	\item To implement the system for the access to the real world.
+	\item Consolidating the sytem by removing the trival features and small as well as big bugs.
+	\item Removing the obsolescene problems.
+	\item To revise the system according to the need and change of standard in use.
+\end{itemize}
+
 \cleardoublepage
 
 \section{Litrature Review}
