Added literature review

--- a/proposal.tex
+++ b/proposal.tex
@@ -120,7 +120,23 @@ The first involved the problem study, solution proposition, designing, developem
 
 \cleardoublepage
 
-\section{Litrature Review}
+\section{Literature Review}
+\subsection{Proposed System}
+	The propsed system will be able to recommed the user based on their social media profiles, saving the actual precious time of the users for searching the music of their choice. We have proposed a system that bascially has the following features:
+\begin{itemize}
+	\item Recommendation of the music based on the social media profile.
+	\item Elimination of the search for the right music.
+	\item Provision for the easy access to music.
+\end{itemize}
+\subsection{Project Description}
+The proposed system provides the user with the recommendation of the music bbased on the social media profiles replacing the conventional method of seraching the music of the right chocie.
+Our sytem comprises of the two yet interdependent subsystems.
+\begin{itemize}
+	\item Front End \\
+		It is the visible part of the system. The user will interact with this part of the system. It offers the GUI for the interaction and consists of login, recommedation of music based on the social media profile.
+	\item Back End \\
+		This is the part of the system where all user and music items profiles are stored. Every processing work that is to be done will be done by the back end of the system. This unit is handled by the admin/developers who are responsible for the addition, modification, updating the content of the system.
+\end{itemize}
 \cleardoublepage
 
 \section{Methodology}
