Added expected results

--- a/proposal.tex
+++ b/proposal.tex
@@ -171,8 +171,11 @@ Our sytem comprises of the two yet interdependent subsystems.
 \cleardoublepage
 
 \section{Expected Outcomes/Result}
-\cleardoublepage
+The system is expected to recommed the music to the social media users based on their's proiles.
 \subsection{Achievements and Benefits}
+\begin{itemize}
+	\item The major advantage the people will receive the system is to easy access to the right music of their choice eliminating the conventional method of searching the right music. 
+\end{itemize}
 \cleardoublepage
 
 \section{Present Scope and Future Improvement}
