Added conclusion and style file

--- a/proposal.tex
+++ b/proposal.tex
@@ -179,10 +179,16 @@ The system is expected to recommed the music to the social media users based on 
 \cleardoublepage
 
 \section{Present Scope and Future Improvement}
+\subsection{Present Scope}
+The most important scope of this project will be to act as a prototype to recommend music to the social media users based on their profiles.
+\subsection{Future Improvement}
+The major enhancement that can be done to a system can be acheived by making the system \textbf{``Feed Recommendation System''}. The feed might include the movies,sports, news, weather news etc.\\
+Besides the system can also have the mobile application to interact with the system as smartphones are popular these days.
 \cleardoublepage
 
 \section{Conclusion}
 \cleardoublepage
+Thus after the completion of the project, we will be able to make a recommendation system to the social media users based on their profiles eliminating the conventional method of searching the music of the choice.
 \section*{References}
 \bibliographystyle{ieeetr}
 \addcontentsline{toc}{section}{\numberline{}References}
