Added design approach

--- a/proposal.tex
+++ b/proposal.tex
@@ -140,16 +140,25 @@ Our sytem comprises of the two yet interdependent subsystems.
 \cleardoublepage
 
 \section{Methodology}
-\cleardoublepage
 
+\cleardoublepage
+\subsection{Design Approach}
+The proposed system is intended to be developed with the \textbf{``Incremental Developement Approach''}. Thus proposed system is expected to be evolved through the several versions until complete system has been developed interleaving the activity of specification, developement and validation.
+\begin{figure}
+	\includegraphics[width = \linewidth]{}<++>
+\end{figure}
+\cleardoublepage
 \subsection{Primary/Secondary Source of Data Collection}
 \cleardoublepage
+
 
 \subsection{System Block Diagram}
 \cleardoublepage
 
+
 \subsection{Algorithm to be used}
 \cleardoublepage
+
 
 \subsection{Algorithm Flow Diageam}
 \cleardoublepage
@@ -157,18 +166,23 @@ Our sytem comprises of the two yet interdependent subsystems.
 \subsection{Description of each block/module}
 \cleardoublepage
 
+
 \subsection{Requirement List (Hardware/Software Tools)}
 \cleardoublepage
+
 
 \subsection{Cost Estimation}
 \cleardoublepage
 
+
 \subsection{Time Schedule Estimation}
 \cleardoublepage
+
 \subsubsection{Part A: Proposal to Mid-Term Defense}
 \cleardoublepage
 \subsubsection{Part B: Mid-Term to Final Presentation}
 \cleardoublepage
+
 
 \section{Expected Outcomes/Result}
 The system is expected to recommed the music to the social media users based on their's proiles.
