--- a/proposal.tex
+++ b/proposal.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[a4paper,12pt]{article}
 
 % \usepackage{report}
 \usepackage{lipsum}
@@ -49,7 +49,8 @@
     {\LARGE \textsc{A Major Project Proposal on}}\\
     [0.5cm]
     % \huge{\bfseries satin - chatbot}\\
-    {\Large \textsc{Personality Based Music Recommendation System}}\\
+    {\Large \textsc{Personality Based \\
+    Music Recommendation System}}\\
     [1.8in]
     %\line(1,0){200}\\
     
@@ -62,16 +63,16 @@
 
     {\LARGE \textsc{\large Submitted by}}\\
     [0.05in]
-    {\large Nabin Bhattarai (070bct522)}\\
-    [0.05in]
     {\large Miran Ghimire (070bct521)}\\
+    [0.05in]
+    {\large Nabin Bhattarai (070bct522)}\\
     [0.05in]
     {\large Abhishek Paudel (070bct502)}\\
     [0.05in]
     {\large Brihat Ratna Bajracharya (070bct513)}\\
     [0.05in]
   \end{center}
-\end{titlepage}
+i\end{titlepage}
 
 \pagenumbering{roman}
 \setcounter{page}{2}
@@ -101,13 +102,14 @@ API : Application Programming Interface
 
 \section*{Abstract}
 With the evolution of internet and popularity of social media, it has become the most prominent and dominent source of information sharing and communication. A person's perference can be determined using his/her social media. Hence based on this information about his/her profile related content can be delievered to the user.\\
-Therefore we have come with ``\textbf{Social Media Profile Based Music Recommendation System}''. This project mainly concentrates on the recommendation of the music based on the preference of the user which basically consists ofthe three parts as input,process and output. In input part, the system takesuser data fetched from the social media and information about the music. In the processing media, the userdata and music data are analyzed for the recommender system(content based and collaborative filtering). Similarly, in the output part, it recommends the music to the user.
+Therefore we have come with ``\textbf{Personality Based Music Recommendation System}''. This project mainly concentrates on the recommendation of the music based on the preference of the user which basically consists ofthe three parts as input,process and output. In input part, the system takesuser data fetched from the social media and information about the music.In the processing media, the userdata and music data are analyzed for the recommender system(content based and collaborative filtering) along with the user's personality using Big 5 Personality Traits. Similarly, in the output part, it recommends the music to the user.
 \thispagestyle{empty}
 \cleardoublepage
 \pagenumbering{arabic}
 \section{Introduction}
 	``\textbf{Social Media Profile Based Music Recommendation}'' is the system to recommend the music to the users based his/her preference which is obtained from the social media. In this contemporary era of digital technologies, social media has become one of the prominent means for information sharing and communication. Likewise music has been one of the prominent market of entertainment. People listen to music everyday. The fact that music can blend with any emotion has made it's way to different sorts of people with different sorts of personality.\\
-	Hence we have come up with the system to recommend the music to a different people based on their social media profiles.
+	Hence we have come up with the system to recommend the music to a different people based on their social media profiles.Previous work has shown that the information in users social media profiles is reflective of their actual personalities, not an idealized version of themselves, which makes social media platform for studying a people personality.\\
+	Several well studied personality models have been proposed, among which the Big Five model is established as the most popular one,which suggests that the regularity in someone's behavior over time and situations uniquely identifies his/her personality type along five dimesions: Openness to experience, Neuroticsm, Extroversion, Aggreableness and Conscientiousness.
 \cleardoublepage
 
 \section{Feasibility Study Report}
@@ -139,12 +141,23 @@ The first involved the problem study, solution proposition, designing, developem
 \cleardoublepage
 
 \section{Literature Review}
+\subsection{Big Five Model of Personality Dimensions}
+The Big Five model of personality dimensions has emerged as one of the well-researched and well-regarded measures of personality structure in recent years. The models encorporates the five domain of personality: Openess, Conscientiouness, Extroversion. Agreeableness, and Neuroticism,were conceived by Tupes and Christal as the fundamental traits that emerged from the analysis of the pervious personality tests. McCrae, Costa and John continued five factor model research and consistently found generality across age, gender and clultural lines. The Big Five traits are characterized by the following:
+\begin{itemize}
+	\item \textbf{Openness to Experience:} curious, intelligent, imaginative. High scorers tend to be artistic and sophisticated in taste and appreciate diverse views, ideas and experiences.
+	\item \textbf{Conscientiousness:} responsible, organized, preservering. Conscientious individuals are extremely realiable and tend to be high achievers, hard workers and planners.
+	\item \textbf{Extroversion:} outgoing, amicable, assertive. Friendly and energetic, extroverts draw inspiration from social situations.
+	\item \textbf{Agreeableness:} cooperative, helpful,nurturing. People who score high in agreeableness are peace-keepers who are generally optimistic and trusting of others.
+	\item \textbf{Neuroticism:} anxious, insecure, sensitive. Neurotics are moody, tense and easily tipped into experiencing negative emotions.
+\end{itemize}
+
 \subsection{Proposed System}
-	The propsed system will be able to recommed the user based on their social media profiles, saving the actual precious time of the users for searching the music of their choice. We have proposed a system that bascially has the following features:
+	The proposed system will be able to recommend the music to the user based on their social media profiles, saving the actual precious time of the users for searching the music of their choice. We have proposed a system that bascially has the following features:
 \begin{itemize}
 	\item Recommendation of the music based on the social media profile.
 	\item Elimination of the search for the right music.
 	\item Provision for the easy access to music.
+	\item Personality analysis of the users based on social media profiles.
 \end{itemize}
 \subsection{Project Description}
 The proposed system provides the user with the recommendation of the music bbased on the social media profiles replacing the conventional method of seraching the music of the right chocie.
@@ -171,7 +184,7 @@ The proposed system is intended to be developed with the \textbf{``Incremental D
 The data set used in our system are:
 \begin{enumerate}
 \item User's profile\\
-  It will be extracted from facebook API
+  It will be extracted from facebook API and ``myPersonality'' dataset will be used to study the personality of the users with the help of their online profile features and status update text.
 \item Music data set\\
   It will be extracted from Million Song Dataset from kaggle. \\
   Available Features of Music data set are :
@@ -190,6 +203,15 @@ The data set used in our system are:
 \end{figure}
 
 \subsection{Algorithm to be used}
+\subsubsection{Personality Deduction}
+Personality of the user will be deduced using Big Five model of personality dimensions which will be done in the following ways:
+\begin{itemize}
+\item \textbf{Feature Extraction:} Dataset provided by the ``mypersonality''will used to study the personality of the facebook users. Dataset consists of survey of facebook users to study a their personality traits. The feature extraction will be done using \textbf{``Text Classification''} on the dataset using NLP and the feature set will be a \textbf{``Bag of words''} that can describe the personality traits of the users. It can furthur be optimized wwith TF/IDF analysis.
+\item \textbf{Classification Algorithm:} As Naive Bayes classification provides the probabilistic view on the classification items based on the given sets of input, we will be using Naive Bayes algorithm to predict the personality on probability basis.\\
+	Overfitting,Underfitting and efficency will be solved with cross-validation,log space and tf-idf model.
+	Besides, other classification alogrithms such as logistic regression,SVM can be applied to a problem as well.
+\end{itemize}
+\subsubsection{Music Recommendation System}
 We are planning to use Hybrid Recommendation Algorithm which comprises of Content, Collaborative Recommendation Algorithm.
 \begin{itemize}
 \item Content Based Recommendation System :\\
@@ -197,6 +219,7 @@ We are planning to use Hybrid Recommendation Algorithm which comprises of Conten
 \item Collaborative Filtering :\\
   In this system patterns of user behavior/model are observed for the recommendation.
 \end{itemize}
+Besides as the lyrics of the song is provided within the ``Million Song Dataset'', NLP(Text classification) can be applied to the lyrics in order to determine it's emotion which can be applied to recommend the music to the user based on his/her personality.
 \cleardoublepage
 
 \subsection{Algorithm Flow Diagram}
@@ -275,15 +298,37 @@ The system is expected to recommed the music to the social media users based on 
 The most important scope of this project will be to act as a prototype to recommend music to the social media users based on their profiles.
 \subsection{Future Improvement}
 The major enhancement that can be done to a system can be acheived by making the system \textbf{``Feed Recommendation System''}. The feed might include the movies,sports, news, weather news etc.\\
+Moreover, the system can be benefical to the other recommendation system like e-commerce,movie streaming channels whereby user's behavior is critical on to recommend the other product.\\
 Besides the system can also have the mobile application to interact with the system as smartphones are popular these days.
 \cleardoublepage
 
 \section{Conclusion}
-Thus after the completion of the project, we will be able to make a recommendation system to the social media users based on their profiles eliminating the conventional method of searching the music of the choice.
+Thus after the completion of the project, we will be able to make a recommendation system to the social media users based on their profiles eliminating the conventional method of searching the music of the choice as well as predict his/her personality based on his/her social media account.
 \cleardoublepage
 
-\bibliographystyle{ieeetr}
-\addcontentsline{toc}{section}{\numberline{}References}
-\bibliography{proposal}
-\nocite{*}
+%\bibliographystyle{ieeetr}
+%\addcontentsline{toc}{section}{\numberline{}References}
+%\bibliography{proposal}
+%\nocite{*}
+\addcontentsline{toc}{section}{References}
+\begin{thebibliography}{9}
+	\bibitem{myPersonality DataSet}
+		myPersonality DataSet,
+	\\\texttt{http://mypersonality.org/wiki/doku.php}
+	\bibitem{Million Song DataSet}
+		Kaggle:Your Home for Data Science
+	\\\texttt{https://labrosa.ee.columbia.edu/millionsong}
+	\bibitem{NLP}
+	Christopher Manning,Stanford NLP-Stanford NLP Group
+	\\\texttt{https://nlp.standford.edu/manning/}
+	\bibitem{Recommendation System}
+	Recommendation System,Courseera,
+	\\\texttt{https://coursera.org/learn/machine-learning}
+	\bibitem{Big 5 Personality Traits}
+	Studying the big five personality traits-UK Essays,
+	\\\texttt{https://ukessays.com/essays/psychology/studying-the-big-five-personality-traits.php}
+\bibitem{Facebook Graph API}
+	Facebook Graph API,
+	\\\texttt{https://developers.facebook.com/docs/graph-api}
+\end{thebibliography}
 \end{document}
